# rupee

./: .dockerignore  .travis.yml  COPYING  Cargo.toml  Dockerfile.development  INSTALL.md  LICENSE-APACHE  README.md
res/: config.yml  properties.toml
res/fixtures/videos/: vp8.vorbis.webm
src/: lib.rs  main.rs
src/domain/: media.rs  meta.rs  mod.rs
src/service/: mod.rs
src/service/handler/: mod.rs  ping.rs
src/service/response/: mod.rs  pong.rs
src/storage/: mod.rs
src/storage/blob/: config.rs  factory.rs  hashing.rs  mod.rs
src/storage/blob/backend/: bucket.rs  mem.rs  mod.rs
src/storage/meta/: config.rs  factory.rs  mod.rs
src/storage/meta/backend/: mem.rs  mod.rs  postgres.rs  rocksdb.rs
src/transcoder/: mod.rs
