[package]
name = "rupee"
version = "0.0.1"
authors = ["Matthias Hecker <mail@mattzq.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
vips = { path = "./vendor/vips" }
actix-web = "2.0.0"
serde = "1.0.114"
serde_yaml = "0.8.13"
serde_json = "1.0"
typetag = "0.1"

rmp-serde = "0.14.4"

rocksdb = "0.14.0"

hex = "0.4.2"
blake2 = "0.9.0"
sha2 = "0.9.1"
sha3 = "0.9.1"
whirlpool = "0.9.0"
fasthash = "0.4.0"

tempfile = "3.1.0"
